# suite

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  HISTORY-GRAFT.md  LOCALIZATION_INVENTORY_FA.md  README.md  SERVICES.md  crowdin.yml  knip.json  monorepo.md  package.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: meet-build.yml  meet-e2e.yml  meet-linter.yml  meet-sfu-build.yml  suite-ci.yml  suite-linter.yml
docs/localization/: core-visible-ux-fa-audit.md
docs/superpowers/plans/: 2026-07-15-suite-cutover.md
docs/superpowers/specs/: 2026-07-15-suite-cutover-design.md
frontend/: .gitignore  PHASE5-PORT-CONTRACT.md  index.html  package.json  package.union.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/scripts/: copy-noise-suppression-assets.mjs  link-frappe-ui.mjs  unlink-frappe-ui.mjs
frontend/src/: App.vue  env.d.ts  index.css  main.ts
frontend/src/apps/: MIGRATION_NOTES.md  README.md  registry.ts
frontend/src/boot/: config.ts  session.ts  translation.ts
frontend/src/data/: session.ts
frontend/src/router/: index.ts
frontend/src/shell/: AppContainer.vue  LauncherView.vue  NotFoundView.vue  SuiteLayout.vue
frontend/src/shims/: noise-suppression-audio-worklet.ts
frontend/src/stores/: root.ts
realtime/: handlers.js
scripts/: apply_persian_overrides.py  persian_core_ux_overrides.py  persian_overrides.py
suite/: hooks.py  modules.txt  patches.txt  test_www.py
suite/api/: __init__.py  account.py
suite/calendar/: README.md  hooks.py
suite/calendar/api/: __init__.py
suite/calendar/public/: node_modules
suite/calendar/www/: calendar.html  calendar.py
suite/client/custom/: user.json
suite/drive/: README.md  hooks.py  install.py  patches.txt
suite/drive/api/: embed.py  files.py  integration.py  list.py  notifications.py  permissions.py  product.py  s3.py  scripts.py  storage.py  tags.py
suite/drive/docker/: init.sh
suite/drive/fixtures/: custom_field.json
suite/drive/overrides/: file.py
suite/drive/patches/: integrate_with_framework.py  migrate_s3_url_prefix.py  team_restructure.py
suite/drive/public/: node_modules
suite/drive/tests/: test_storage_api.py  test_storage_helpers.py
suite/drive/utils/: __init__.py  api.py  files.py  overrides.py  users.py
suite/drive/www/: drive.html  drive.py
suite/fixtures/: role.json
suite/locale/: fa.po  main.pot
suite/mail/: CLAUDE.md  README.md  agent.py  ansible.py  auth.py  backend.py  events.py  hooks.py  imap.py  install.py  jmap.py  mail_server.py  modules.txt  overrides.py  patches.txt  search.py  smtp.py  stalwart.py  tasks.py
suite/mail/UPGRADING/: v1.md
suite/mail/api/: __init__.py  account.py  admin.py  auth.py  blacklist.py  contacts.py  inbound.py  jmap.py  mail.py  outbound.py  sieve.py  spamd.py  track.py  utils.py  webhook.py
suite/mail/desktop_icon/: mail.json
suite/mail/docker/: docker-compose.yml  init.sh
suite/mail/fixtures/: custom_docperm.json  custom_field.json  role.json
suite/mail/jmap/: __init__.py  connection.py
suite/mail/locale/: main.pot
suite/mail/patches/: backfill_blocked_email_account_id.py  backfill_junk_email_account_id.py  backfill_mail_exchange_account_id.py  backfill_mail_queue_account_id.py  backfill_mail_sync_history_account_id.py  backfill_mailbox_automation_rules.py  backfill_mailbox_settings_account_id.py  backfill_screened_email_address_account.py  capture_user_outgoing_settings.py  clear_legacy_blob_store_layout.py  clear_legacy_user_scoped_stores.py  configure_exchange_log.py  configure_inbound_outbound_log.py  configure_mail_cluster.py  configure_mail_server.py  configure_mail_settings.py  copy_sync_history_account_id_to_account.py  create_account_settings.py  create_archive_mailbox.py  create_frappe_mail_automation_script.py  create_frappe_mail_automation_sieve_script.py  create_principals_binding.py  create_push_subscriptions.py  create_user_settings.py  delete_client_module.py  delete_server_module.py  destroy_data_store.py  generate_ssh_keypair_for_cluster.py  migrate_data_store_to_lmdb.py  migrate_outgoing_settings_to_account.py  migrate_to_screened_email_address.py  rebuild_rate_limit_unique_constraint.py  (+13 more)
suite/meet/: README.md  hooks.py  knip.json  patches.txt  permission.py  test_www.py
suite/sheets/: BUILD.md  README.md  api.py  boot.py  collab.py  hooks.py  patches.txt  permissions.py
suite/slides/: README.md  api.py  hooks.py  patches.txt
suite/suite_core/: boot.py
suite/utils/: __init__.py  dt.py  file.py  lock.py  user.py
suite/writer/: README.md  feedback.md  hooks.py  modules.txt  patches.txt  perms.py  search.py
suite/www/: suite.py
(+2499 files in other folders)
