[project]
name = "suite"
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io" },
]
description = "Frappe Suite — Drive, Slides, Writer, Sheets, Meet, Mail, Calendar in one app."
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    # drive
    "opencv-python-headless>=4.10.0.84",
    "python-magic==0.4.27",
    "mimemapper==0.4.1",
    "unoconv>=0.9.0",
    "PyJWT>=2.8.0",
    "thumbnail>=1.5.0",
    "boto3~=1.34.143",
    "pycrdt==0.12.26",
    "Markdown==3.8.2",
    "beautifulsoup4~=4.13.4",
    "html2text==2025.4.15",
    # mail
    "wrapt~=1.17.3",
    "bcrypt~=4.2.1",
    "pexpect~=4.9.0",
    "msgpack~=1.1.2",
    "isodate~=0.7.2",
    "paramiko~=5.0.0",
    "dnspython~=2.4.2",
    "rocksdict~=0.3.29",
    "pydenticon~=0.3.1",
    "dns-lexicon~=3.20.1",
    "markdown-it-py~=4.0.0",
    "ansible-runner~=2.4.1",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
