[project]
name = "suite"
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io" },
]
description = "Frappe Suite — Drive, Slides, Writer, Sheets, Meet, Mail, Calendar in one app."
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    # drive
    "av>=12.0.0",
    "mimemapper==0.4.1",
    "pymupdf>=1.24.0",
    "boto3~=1.43.29",
    "pycrdt==0.12.26",
    # kept for other suite modules (drive dropped these): PyJWT→meet, Markdown→writer, beautifulsoup4→mail/client
    "PyJWT>=2.8.0",
    "Markdown==3.8.2",
    "beautifulsoup4~=4.15.0",
    # mail
    "wrapt~=1.17.3",
    "bcrypt~=4.2.1",
    "pexpect~=4.9.0",
    "msgpack~=1.2.1",
    "isodate~=0.7.2",
    "icalendar~=6.1.0",
    "paramiko~=5.0.0",
    "dnspython~=2.4.2",
    "lmdb~=1.7.1",
    "pydenticon~=0.3.1",
    "dns-lexicon~=3.20.1",
    "markdown-it-py~=4.0.0",
    "ansible-runner~=2.4.1",
    # sheets — AI Assist (Claude)
    "anthropic>=0.40",
]

[deploy.dependencies.apt]
packages = [
    "ffmpeg",   # drive: video thumbnails/transcode
    "ansible",  # mail: stalwart provisioning (ansible-runner)
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "UP030", # Use implicit references for positional format fields (translations)
    "UP031", # Use format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call (translations)
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
